tests/fail/div_empty_stack.avm
; div on an empty stack
div
